@@ -70,7 +70,7 @@ namespace QLightDM
 	void loginAsGuest();
 	void provideSecret(const QString &secret);
 	void cancelAuthentication();
-	void startSession(const QString &session=QString(), const QString &language=QString());
+	void startSession(const QString &session=QString());
 
 	bool canSuspend() const;
 	bool canHibernate() const;
