@@ -1,4 +1,3 @@
 BOOLEAN:OBJECT
 VOID:INT,POINTER
 VOID:OBJECT,BOOLEAN
-VOID:STRING,STRING
