@@ -5,6 +5,8 @@ Overview of changes in lightdm 0.4.1
     * Restart X server if it crashes during a session
     * Don't set language environment variables, use the daemon values
       (system default) and leave it to ~/.profile for users to set these
+    * Change greeter library API, starting a session no longer has a language
+      option
 
 Overview of changes in lightdm 0.4.0
 
